--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "index.js",
-  "name": "@naturacosmeticos/node-base",
+  "name": "@naturacosmeticos/natura-typeorm",
   "author": "Natura Cosméticos <TDDAArquitetura@natura.net>",
   "version": "1.1.13",
   "engines": {
@@ -26,16 +26,15 @@
     "husky": "^1.0.0-rc.13",
     "mocha": "^5.2.0",
     "nyc": "^11.9.0",
-    "sinon": "^5.1.1",
-    "supertest": "^3.1.0"
+    "sinon": "^5.1.1"
   },
   "scripts": {
     "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
     "lint": "eslint src/ test/",
     "lint:fix": "eslint --fix src/ test/",
-    "test": "mocha --recursive --require test/helpers/start.js --exit",
-    "test:unit": "mocha --recursive --require test/helpers/start.js",
-    "test:coverage": "nyc mocha --recursive --require test/helpers/start.js",
+    "test": "mocha --recursive --exit",
+    "test:unit": "mocha --recursive",
+    "test:coverage": "nyc mocha --recursive",
     "test:watch": "mocha -w",
     "transpile": "echo ok",
     "package": "bash package.sh"
@@ -44,15 +43,14 @@
     "all": true,
     "check-coverage": true,
     "per-file": false,
-    "lines": 30,
-    "statements": 30,
+    "lines": 0,
+    "statements": 0,
     "functions": 0,
     "branches": 0,
     "include": [
       "src/**/*.js"
     ],
     "exclude": [
-      "src/orm/**/*.js",
       "test/**/*.js"
     ],
     "reporter": [
@@ -68,20 +66,10 @@
     }
   },
   "dependencies": {
-    "highlight.js": "9.14.2",
-    "@naturacosmeticos/clio-nodejs-logger": "^1.2.5",
-    "bluebird": "^3.5.2",
-    "body-parser": "^1.18.3",
-    "commander": "^2.17.1",
-    "cors": "^2.8.4",
-    "helmet": "^3.13.0",
-    "humps": "^2.0.1",
-    "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
-    "typeorm": "^0.2.6",
-    "yargs": "^13.0.0-candidate.0"
+    "@naturacosmeticos/clio-nodejs-logger": "^1.3.0",
+    "typeorm": "^0.2.17"
   },
-  "homepage": "https://github.com/natura-cosmeticos/node-base#readme",
-  "bugs": "https://github.com/natura-cosmeticos/node-base/issues",
+  "homepage": "https://github.com/natura-cosmeticos/natura-typeorm#readme",
+  "bugs": "https://github.com/natura-cosmeticos/natura-typeorm/issues",
   "license": "MIT"
 }
